# sacrifice

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac
UserHooks/: EnhanceMPI.cxx  JetMatchingMadGraphHook.cxx  Makefile.am  Makefile.in  PTRelVetoedShower.cxx  PTRel_boostVetoedShower.cxx  PoWHEGVetoedShower.cxx  QCDVetoedShower.cxx  SuppressMPI.cxx  UserHookUtils.hh  WZVetoedShower.cxx  main31.cxx
config/: ._install-sh  config.h.in
include/: Makefile.am  Makefile.in
include/HEPUtils/: FastJet.h  Makefile.am  Makefile.in  MathUtils.h  Particle.h  PhaseSpace.h  Utils.h  Vectors.h
include/MCUtils/: Makefile.am  Makefile.in  PIDCodes.h  PIDUtils.h
include/Sacrifice/: BeamParticle.hh  Exceptions.hh  HepMCIOHandler.hh  MCUtilsHandler.hh  Makefile.am  Makefile.in  PhotosHandler.hh  UserHooksFactory.hh  Utils.hh  binreloc.h
include/tclap/: Makefile.am  Makefile.in
m4/: ._ax_check_zlib.m4  ._ax_cxx_compile_stdcxx_11.m4  ._libtool.m4  ._ltoptions.m4  ._ltsugar.m4  ._ltversion.m4  ._lt~obsolete.m4  ax_boost_base.m4  dynamic_libs.m4  get_mcutils.m4  hepmc.m4  lcg.m4  lhapdf.m4  mcutils.m4  photos.m4  pythia.m4
share/: A14-NNPDF23LO.params  A2-MSTW2008LO.params  AU2-CT10.params  AU2-CTEQ6L1.params  Makefile.am  Makefile.in  Py81X_A2-CTEQ6L1.params  Py81X_A2-MSTW2008LO.params  Py81X_AU2-CT10.params  Py81X_AU2-CTEQ6L1.params  Py81X_AU2-MSTW2008LO.params  setupPythia.sh.in
src/: BeamParticle.cxx  HepMCIOHandler_gzip.cxx  HepMCIOHandler_no_gzip.cxx  MCUtilsHandler_disabled.cxx  MCUtilsHandler_enabled.cxx  Makefile.am  Makefile.in  PhotosHandler_disabled.cxx  PhotosHandler_enabled.cxx  PythiaMain.cxx  UserHooksFactory.cxx  binreloc.c  binreloc.cxx
src/zstr/: ._zstr.hpp
