pythiamaindir=$(datadir)/Sacrifice

nodist_pythiamain_DATA  = setupPythia.sh

dist_pythiamain_DATA  = A2-MSTW2008LO.params    \
                        A2-CTEQ6L1.params       \
                        A14-NNPDF23LO.params    \
                        AU2-CT10.params         \
                        AU2-CTEQ6L1.params      \
                        AU2-MSTW2008LO.params
                        
dist_pythiamain_DATA  +=  Py81X_A2-MSTW2008LO.params    \
                          Py81X_A2-CTEQ6L1.params       \
                          Py81X_AU2-CT10.params         \
                          Py81X_AU2-CTEQ6L1.params      \
                          Py81X_AU2-MSTW2008LO.params
