SUBDIRS = .

dist_noinst_HEADERS = BinnedFn.h    \
                      Event.h       \
                      FastJet.h     \
                      Jet.h         \
                      MathUtils.h   \
                      Particle.h    \
                      PhaseSpace.h  \
                      Utils.h       \
                      Vectors.h
