SUBDIRS = .

dist_noinst_HEADERS = Clustering.h \
                      FastJet.h \
                      HepMCEventFilters.h \
                      HepMCEventUtils.h \
                      HepMCParticleClassifiers.h \
                      HepMCParticleFilters.h \
                      HepMCParticleUtils.h \
                      HepMCUtils.h \
                      HepMCVertexClassifiers.h \
                      HepMCVertexUtils.h \
                      MCUtils.h \
                      MathUtils.h \
                      PIDCodes.h \
                      PIDUtils.h \
                      Utils.h \
                      Vectors.h

