SUBDIRS = .

dist_noinst_HEADERS = Clustering.h \
                      HepMCEventFilters.h \
                      HepMCEventUtils.h \
                      HepMCParticleClassifiers.h \
                      HepMCParticleFilters.h \
                      HepMCParticleUtils.h \
                      HepMCUtils.h \
                      HepMCVectors.h \
                      HepMCVertexClassifiers.h \
                      HepMCVertexUtils.h \
                      MCUtils.h \
                      PIDCodes.h \
                      PIDUtils.h
