SUBDIRS = .

nobase_pkginclude_HEADERS = UserHooksFactory.hh

dist_noinst_HEADERS       = BeamParticle.hh   \
                            Exceptions.hh     \
                            HepMCIOHandler.hh \
                            MCUtilsHandler.hh \
                            PhotosHandler.hh  \
                            Utils.hh    
                      
dist_noinst_HEADERS      += binreloc.h

